# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG	= fixed a bug that was (or could have been) crashing

May 2, 2007
    fromstring, and tostring work correctly for alpha.  Thanks Brian Fisher!

Apr 26, 2007
    Some code cleanups from Marcus von Appen.  min->MIN, indentation, other.
    A rewritten scrap module.  Hasn't been tested on osx/windows.

Dec 15, 2006
    Some config changes to make scrap compile correctly on freebsd and debian.

Nov 27, 2006
    Fixes scrap, image, overlay, compiling on windows. Thanks John Popplewell!
    Allowed threads within the transform module. Releasing GIL around C stuff.

Nov 5, 2006
    Fix for SysFont infinite loop bug.  Thanks Regis Desgroppes!
    Compilation fix on MacOSX.  Thanks Emmanuel Hainry!

Nov 4, 2006
    Documentation fixes.

Jun 16, 2006
    Allowed passing in the destination surface to the transform.scale and
     transform.scale2x.  This is faster if reusing the surface.

Jun 15, 2006
    [BUG] Font fix for empty string causing segfault.  Added unittest.

Jun 10, 2006
    64bit compile fixes for Fedora from Christopher Stone

Jun 8, 2006
    Documentation changes.
    Move to subversion instead of cvs.

May 28, 2006
    Added saving surfaces as a .jpg or .jpeg file.  Works if imageext is there.

May 27, 2006
    Added saving surfaces as a .png file.  Works if imageext is there.
    Saves as 24 bit RGB or as 32bit RGBA pngs depending on the surface.

May 20, 2006
    Documentation updates merged in from some doc comments on website.
    [BUG] pygame.transform.* functions now retain SRCALPHA info after scaling.
    Some new unittests for pygame.display.update, pygame.transform.scale.

May 18, 2006
    Patch from Peter Nicolai to add the channel to the sound queued event.

April 25, 2006
    Added some new blend modes to blit. Add,sub,mult,max,min.
    [BUG] Fixed SRCALPHA blending.  Thanks Lenard Lindstrom!

April 9, 2006